assets/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
    @responsive {
        .h-content {
            height: max-content;
        }

        /* Chrome, Safari and Opera */
        .no-scrollbar::-webkit-scrollbar {
            display: none;
        }
    
        .no-scrollbar {
            -ms-overflow-style: none;  /* IE and Edge */
            scrollbar-width: none;  /* Firefox */
        }
    }
}

/* General */

* {
    @apply dark:text-white dark:border-gray-700;
}

a:not(.header-title, .btn-primary, .btn-secondary, .no-underline) {
    @apply hover:underline;
}

.gradient {
    @apply bg-gradient-to-r from-green-400 to-blue-500;
}

/* Buttons and inputs */

.input {
    @apply border border-indigo-700 py-3 px-5 rounded-md text-indigo-500 hover:shadow bg-white dark:bg-gray-800 dark:text-gray-200 dark:border-gray-700 focus:shadow-lg;
}

.input-static:hover {
    @apply shadow-none;
}

.btn-primary {
    @apply cursor-pointer border font-bold py-3 px-5 rounded-md bg-indigo-700 hover:bg-indigo-900 text-blue-50 hover:shadow;
}
.btn-secondary {
    @apply cursor-pointer border font-bold py-3 px-5 rounded-md hover:bg-indigo-200 text-indigo-500 hover:shadow bg-white dark:bg-gray-800 dark:hover:bg-gray-850;
}

.btn-primary.mobile, .btn-secondary.mobile {
    @apply w-full block mb-3;
}

.input-l {
    @apply rounded-r-none border-r-0;
}

.input-r {
    @apply rounded-l-none;
}

.input-m {
    @apply rounded-l-none rounded-r-none border-r-0;
}

/* Header */

.header-item {
    @apply font-bold p-4;
}
.header-button {
    @apply p-2 border-0 rounded;
}
.header-button.btn-secondary {
    @apply bg-blue-50 hover:bg-indigo-200;
}

.btn-menu {
    @apply cursor-pointer font-bold py-3 px-5 bg-indigo-700 hover:bg-indigo-900 text-blue-50 hover:shadow;
}

/* Typography */

.title {
    @apply tracking-tighter text-3xl xs:text-4xl sm:text-6xl font-bold py-7 w-full;
}
.subtitle {
    @apply text-xl sm:text-2xl font-medium text-gray-500 px-4;
}
.heading {
    @apply my-3 font-bold text-2xl;
}

.jumbo {
    @apply md:text-7xl lg:text-8xl p-8;
}

.paragraph {
    @apply py-2 text-xl text-gray-700 dark:text-gray-300;
}

.intro {
    @apply text-xl text-gray-500 pb-12 font-medium dark:text-gray-200;
}

.highlight {
    @apply text-blue-900 px-3 rounded-lg bg-gradient-to-r from-blue-100 to-blue-200;
}

.big-highlight {
    @apply text-yellow-900 bg-yellow-200 px-3 pr-6 rounded-lg dark:bg-yellow-600 dark:text-yellow-50;
}

.inactive {
    @apply my-6 text-gray-500;
}

/* Post content styles */

.post-content p {
    @apply py-2;
}

.post-content img {
    @apply my-3;
}

.post-content h1, h2, h3 {
    @apply font-bold;
}

.post-content h1 {
    @apply text-xl my-5;
}

.post-content h2 {
    @apply text-lg my-4;
}

.post-content a {
    @apply text-blue-500;
}

/* Images */ 

.icon {
    @apply mr-1;
}

/* Layout */

.page-wrapper {
    @apply mt-6 p-1 md:p-12 xl:flex flex-row justify-center;
}

.page-inner {
    @apply relative mx-auto sm:max-w-2xl md:max-w-6xl;
}

.page-inner:not(.sign-in-up, .blog, .app) {
    @apply flex-grow p-3 sm:p-6 md:p-0 md:m-0;
}

.page-inner.sign-in-up {
    @apply lg:w-1/2 xl:w-2/6;
}

.page-inner.app {
    @apply flex-grow pb-96;
}

.sidebar {
    @apply pt-10 xl:mr-24 2xl:mr-48;
}

.no-top {
    @apply mt-0 pt-0;
}

